--- a/controls/srg_ctr/SRG-APP-000190-CTR-000500.yml
+++ b/controls/srg_ctr/SRG-APP-000190-CTR-000500.yml
@@ -6,4 +6,6 @@ controls:
     communications session at the end of the session, or as follows: for in-band management
     sessions (privileged sessions), the session must be terminated after 10 minutes
     of inactivity;'
-  status: pending
+  status: automated
+  rules:
+  - oauthclient_inactivity_timeout
