--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/rule.yml
@@ -3,36 +3,39 @@ documentation_complete: true
 title: 'Ensure auditd Collects Information on the Use of Privileged Commands'
 
 description: |-
-    The audit system should collect information about usage of privileged
-    commands for all users and root. To find the relevant setuid /
-    setgid programs, run the following command for each local partition
-    <i>PART</i>:
-    <pre>$ sudo find <i>PART</i> -xdev -type f -perm -4000 -o -type f -perm -2000 2&gt;/dev/null</pre>
-    If the <tt>auditd</tt> daemon is configured to use the <tt>augenrules</tt>
-    program to read audit rules during daemon startup (the default), add a line of
-    the following form to a file with suffix <tt>.rules</tt> in the directory
-    <tt>/etc/audit/rules.d</tt> for each setuid / setgid program on the system,
-    replacing the <i>SETUID_PROG_PATH</i> part with the full path of that setuid /
-    setgid program in the list:
-    <pre>-a always,exit -F path=<i>SETUID_PROG_PATH</i> -F auid&gt;={{{ auid }}} -F auid!=unset -F key=privileged</pre>
-    If the <tt>auditd</tt> daemon is configured to use the <tt>auditctl</tt>
-    utility to read audit rules during daemon startup, add a line of the following
-    form to <tt>/etc/audit/audit.rules</tt> for each setuid / setgid program on the
-    system, replacing the <i>SETUID_PROG_PATH</i> part with the full path of that
-    setuid / setgid program in the list:
-    <pre>-a always,exit -F path=<i>SETUID_PROG_PATH</i> -F auid&gt;={{{ auid }}} -F auid!=unset -F key=privileged</pre>
+    The audit system should collect information about usage of privileged commands for all users.
+    These are commands with suid or sgid bits on and they are specially risky in partitions not
+    mounted with noexec and nosuid options. Therefore, these partitions should be first identified
+    by the following command:
+    <pre>findmnt -n -l -k -it $(awk '/nodev/ { print $2 }' /proc/filesystems | paste -sd,) | grep -Pv "noexec|nosuid"</pre>
+
+    For all partitions listed by the previous command, it is necessary to search for
+    setuid / setgid programs using the following command:
+    <pre>$ sudo find <i>PARTITION</i> -xdev -perm /6000 -type f 2&gt;/dev/null</pre>
+
+    For each setuid / setgid program identified by the previous command, an audit rule must be
+    present in the appropriate place using the following line structure:
+    <pre>-a always,exit -F path=<i>PROG_PATH</i> -F perm=x -F auid&gt;={{{ auid }}} -F auid!=unset -F key=privileged</pre>
+
+    If the <tt>auditd</tt> daemon is configured to use the <tt>augenrules</tt> program to read
+    audit rules during daemon startup, add the line to a file with suffix <tt>.rules</tt> in the
+    <tt>/etc/audit/rules.d</tt> directory, replacing the <i>PROG_PATH</i> part with the full path
+    of that setuid / setgid identified program.
+
+    If the <tt>auditd</tt> daemon is configured to use the <tt>auditctl</tt> utility instead, add
+    the line to the <tt>/etc/audit/audit.rules</tt> file, also replacing the <i>PROG_PATH</i> part
+    with the full path of that setuid / setgid identified program.
 
 rationale: |-
-    Misuse of privileged functions, either intentionally or unintentionally by
-    authorized users, or by unauthorized external entities that have compromised system accounts,
-    is a serious and ongoing concern and can have significant adverse impacts on organizations.
-    Auditing the use of privileged functions is one way to detect such misuse and identify
-    the risk from insider and advanced persistent threats.
+    Misuse of privileged functions, either intentionally or unintentionally by authorized users,
+    or by unauthorized external entities that have compromised system accounts, is a serious and
+    ongoing concern that can have significant adverse impacts on organizations.
+    Auditing the use of privileged functions is one way to detect such misuse and identify the
+    risk from insider and advanced persistent threats.
     <br /><br />
-    Privileged programs are subject to escalation-of-privilege attacks,
-    which attempt to subvert their normal role of providing some necessary but
-    limited capability. As such, motivation exists to monitor these programs for
-    unusual activity.
+    Privileged programs are subject to escalation-of-privilege attacks, which attempt to subvert
+    their normal role of providing some necessary but limited capability. As such, motivation
+    exists to monitor these programs for unusual activity.
 
 severity: medium
 
@@ -46,8 +49,8 @@ identifiers:
 
 references:
     cis-csc: 1,11,12,13,14,15,16,19,2,3,4,5,6,7,8,9
-    cis@rhel7: 4.1.12
-    cis@rhel8: 4.1.13
+    cis@rhel7: 4.1.11
+    cis@rhel8: 4.1.3.6
     cis@rhel9: 4.1.3.6
     cis@sle12: 4.1.11
     cis@sle15: 4.1.11
@@ -69,21 +72,25 @@ references:
 ocil_clause: "any setuid or setgid programs doesn't have a line in the audit rules"
 
 ocil: |-
-    To verify that auditing of privileged command use is configured, run the
-    following command for each local partition <i>PART</i> to find relevant
-    setuid / setgid programs:
-    <pre>$ sudo find <i>PART</i> -xdev -type f -perm -4000 -o -type f -perm -2000 2&gt;/dev/null</pre>
-    Run the following command to verify entries in the audit rules for all programs
-    found with the previous command:
-    <pre>$ sudo grep path /etc/audit/audit.rules</pre>
-    All relevant setuid / setgid programs have a line
-    in the audit rules.
+    To verify that auditing of privileged command use is configured, run the following command
+    to search privileged commands in relevant partitions and check if they are covered by auditd
+    rules:
+
+    FILTER_NODEV=$(awk '/nodev/ { print $2 }' /proc/filesystems | paste -sd,)
+    PARTITIONS=$(findmnt -n -l -k -it $FILTER_NODEV | grep -Pv "noexec|nosuid" | awk '{ print $1 }')
+    for PARTITION in $PARTITIONS; do
+      for PRIV_CMD in $(find "${PARTITION}" -xdev -perm /6000 -type f 2&gt;/dev/null); do
+        grep -qr "${PRIV_CMD}" /etc/audit/rules.d /etc/audit/audit.rules &amp;&amp;
+          printf "OK: ${PRIV_CMD}\n" || printf "WARNING - rule not found for: ${PRIV_CMD}\n"
+      done
+    done
+
+    The output should not contain any WARNING.
 
 warnings:
     - general: |-
-        This rule checks for multiple syscalls related to privileged commands;
-        it was written with DISA STIG in mind. Other policies should use a
-        separate rule for each syscall that needs to be checked. For example:
+        This rule checks for multiple syscalls related to privileged commands. If needed to check
+        specific privileged commands, other more specific rules should be considered. For example:
         <ul>
         <li><tt>audit_rules_privileged_commands_su</tt></li>
         <li><tt>audit_rules_privileged_commands_umount</tt></li>
