Fix title in package_mailx_installed
Signed-off-by: Edgar Aguilar <edgar.aguilar@oracle.com>

--- a/linux_os/guide/services/mail/package_mailx_installed/rule.yml
+++ b/linux_os/guide/services/mail/package_mailx_installed/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-title: 'The mailx package is installed'
+title: 'The mailx Package Is Installed'
 
 description: |-
     A mail server is required for sending emails.
