Fix in ansible part of the rule

--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_suid_privilege_function/ansible/shared.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_rules_suid_privilege_function/ansible/shared.yml
@@ -11,6 +11,8 @@
   command:
     grep '^ExecStartPost' /usr/lib/systemd/system/auditd.service
   register: check_rules_scripts_result
+  changed_when: false
+  failed_when: false
 
 - name: Set suid_audit_rules fact
   set_fact:
