--- a/shared/templates/sysctl/oval.template
+++ b/shared/templates/sysctl/oval.template
@@ -40,6 +40,39 @@ obj_{{{ rule_id }}}_static_sysctld_{{{ suffix }}}
     }}}[ \t]*=[ \t]*(|\S|\S[^\n]*\S)[ \t]*$</ind:pattern>
     <ind:instance datatype="int" operation="greater than or equal">1</ind:instance>
 {{%- endmacro -%}}
+
+{{%- macro sysctl_local_variables(suffix) -%}}
+{{%- if SYSCTLVAR == "net.ipv4.ip_local_port_range" %}}
+    <local_variable id="local_var_{{{ rule_id }}}_first_value{{{ suffix }}}"
+                    comment="port range first element"
+                    version="1" datatype="string">
+        <regex_capture pattern="^\s*(\d+)\s+\d+\s*$">
+            <variable_component var_ref="{{{ rule_id }}}_value"/>
+        </regex_capture>
+    </local_variable>
+
+    <local_variable id="local_var_{{{ rule_id }}}_last_value{{{ suffix }}}"
+                    comment="port range last element"
+                    version="1" datatype="string">
+        <regex_capture pattern="^\s*\d+\s+(\d+)\s*$">
+            <variable_component var_ref="{{{ rule_id }}}_value"/>
+        </regex_capture>
+    </local_variable>
+
+    <local_variable id="local_var_{{{ rule_id }}}_regex{{{ suffix }}}"
+                    comment="port range first element"
+                    version="1" datatype="string">
+        <concat>
+            <literal_component>^\s*(</literal_component>
+            <variable_component var_ref="local_var_{{{ rule_id }}}_first_value{{{ suffix }}}"/>
+            <literal_component>\s+</literal_component>
+            <variable_component var_ref="local_var_{{{ rule_id }}}_last_value{{{ suffix }}}"/>
+            <literal_component>)\s*$</literal_component>
+        </concat>
+    </local_variable>
+{{%- endif -%}}
+{{%- endmacro -%}}
+
 {{%- if "P" in FLAGS -%}}
 
 <def-group>
@@ -108,9 +141,15 @@ obj_{{{ rule_id }}}_static_sysctld_{{{ suffix }}}
 {{%- if SYSCTLVAL is string -%}}
 {{%- if SYSCTLVAL == "" %}}
     <unix:sysctl_state id="state_{{{ rule_id }}}_runtime" version="1">
+{{%- if SYSCTLVAR == "net.ipv4.ip_local_port_range" %}}
+        <unix:value datatype="string" operation="pattern match"
+                    var_ref="local_var_{{{ rule_id }}}_regex"/>
+{{%- else %}}
         <unix:value datatype="{{{ DATATYPE }}}" operation="equals"
                     var_ref="{{{ rule_id }}}_value"/>
+{{%- endif %}}
     </unix:sysctl_state>
+{{{ sysctl_local_variables("") }}}
 
     <external_variable id="{{{ rule_id }}}_value" version="1"
                        comment="External variable for {{{ SYSCTLVAR }}}" datatype="{{{ DATATYPE }}}"/>
@@ -217,9 +256,15 @@ obj_{{{ rule_id }}}_static_sysctld_{{{ suffix }}}
 {{%- if SYSCTLVAL == "" %}}
 
     <ind:textfilecontent54_state id="state_{{{ rule_id }}}_static_sysctld" version="1">
+{{%- if SYSCTLVAR == "net.ipv4.ip_local_port_range" %}}
+        <ind:subexpression operation="pattern match" datatype="string"
+                           var_ref="local_var_{{{ rule_id }}}_regex_static"/>
+{{%- else %}}
         <ind:subexpression operation="{{{ OPERATION }}}" var_ref="{{{ rule_id }}}_value"
                            datatype="{{{ DATATYPE }}}"/>
+{{%- endif %}}
     </ind:textfilecontent54_state>
+{{{ sysctl_local_variables("_static") }}}
 
     <external_variable id="{{{ rule_id }}}_value" version="1"
                        comment="External variable for {{{ SYSCTLVAR }}}" datatype="{{{ DATATYPE }}}"/>
